--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,7 @@ img {
 }
 .ProductList {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, 300px);
   gap: 1rem;
 }
 .Product {
